Fix API issues and improve UI
- Fix URL construction bug in fetchParticipants API call
- Add missing /participant/opportunities endpoint to Firebase Functions
- Add sector intelligence API endpoints (overview, ranking, leaders, category-comparison)
- Remove empty sections (Sector Ranking & Benchmarking, Performance Overview)
- Remove quick wins and generated opportunities features
- Update main page content and add Passport Creative link
- Fix stakeholders display in sector tab and creative industries dropdown
- Add debugging console logs for troubleshooting
- Improve header styling and navigation readability

--- a/digital_assessment/hosting/public/index.html
+++ b/digital_assessment/hosting/public/index.html
@@ -21,7 +21,6 @@
     <header>
       <h1>TourismCommons</h1>
       <p class="lead">A space for sharing, learning, and growing together. We believe tourism can be a force for good—especially when its tools, data, and ideas are open to everyone.</p>
-      <div class="note">Built with the International Trade Centre (ITC)</div>
     </header>
     <main>
       <h2>What we stand for</h2>
@@ -37,7 +36,7 @@
       <h2>Mission</h2>
       <p>Provide a shared platform for free tools, open research, and community‑driven tourism development; enabling emerging destinations and stakeholders to enhance competitiveness, foster sustainability, and tell their own stories.</p>
       <h2>About</h2>
-      <p><strong>Alex M. Jeffries</strong> is an international consultant passionate about inclusive tourism growth. Through consultancy with ITC and his creative practice (Passport Creative), he brings together research, practice, and design to help tourism really work for people.</p>
+      <p><strong>Alex M. Jeffries</strong> is an international consultant passionate about inclusive tourism growth. Through projects with organizations like UNDP, ITC, and GGGI, along with his private sector travel marketing work through <a href="https://passportcreative.co" target="_blank" rel="noopener noreferrer">Passport Creative</a>, he brings together research, practice, and design to help make tourism more accessible.</p>
     </main>
     <footer>
       © TourismCommons · Open tools, open knowledge
